Controller updates, views updates.

--- a/core/views/atendimento.html
+++ b/core/views/atendimento.html
@@ -1,1 +1,7 @@
 <h3>Atendimento</h3>
+<div class="container">
+    <form class="form-group" action="" method="post" id="busca">
+        <input class="form-control my-1" type="text" name="busca" placeholder="Buscar local ou solicitante">
+        <input class="btn btn-primary my-1 "type="submit" value="Buscar">
+    </form>
+</div>
