--- a/core/views/atendimento.html
+++ b/core/views/atendimento.html
@@ -1,7 +1,34 @@
 <h3>Atendimento</h3>
 <div class="container">
-    <form class="form-group" action="" method="post" id="busca">
-        <input class="form-control my-1" type="text" name="busca" placeholder="Buscar local ou solicitante">
-        <input class="btn btn-primary my-1 "type="submit" value="Buscar">
-    </form>
+    <div>
+        <button class="btn btn-success" id="btn-buscar">Buscar</button>
+        <button class="btn btn-success" id="btn-novo">Novo</button>
+    </div>
+    <div id="form-buscar" class="hidden">
+        <form class="form-group" action="" method="post" id="busca">
+            <input class="form-control my-1" type="text" name="busca" placeholder="Buscar local ou solicitante">
+            <input class="btn btn-primary my-1 "type="submit" value="Buscar">
+        </form>
+        <div id="resultado" class="text-center"></div> 
+    </div>
+
+    <div id="form-novo" class="hidden">
+        <form action="" method="post" class="form-group" id="novo">
+            <div class="row">
+                <div class="col">
+                    <input type="text" name="local" class="form-control my-1" placeholder="Local">
+                </div>
+                <div class="col">
+                    <input type="text" name="solicitante" class="form-control my-1" placeholder="Solicitante">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <textarea name="descricao" rows="5" class="form-control my-1" placeholder="Descrição"></textarea>
+                </div>
+            </div>            
+            <input type="submit" value="Salvar" class="btn btn-primary my-1">
+        </form>
+
+    </div>
 </div>
